fix: various coderabbit issues
